# 2dGameEngine

./: .gitignore  CMakeLists.txt  imgui.ini
.yeOlde/: Makefile  todo.txt
.yeOlde/include/: assetManager.hpp  definitions.hpp  game.hpp  inputManager.hpp  splashState.hpp  state.hpp  stateManager.hpp
.yeOlde/src/: assetManager.cpp  game.cpp  inputManager.cpp  main.cpp  splashState.cpp  stateManager.cpp
include/Engine/: application.hpp  globalState.hpp
src/Engine/: application.cpp
src/Engine/managers/: assetManager.cpp
src/Engine/states/: globalState.cpp
